# the-forge

./: .env.example  .gitignore  Dockerfile  Makefile  PLAN_resume_coaching.md  README.md  docker-compose.yml  project-instructions.md  pyproject.toml
.claude/: .clauderules
.claude/docs/: testing.md
.github/workflows/: deploy.yml  test.yml
backend/: auth.py  config.py  gcs.py  main.py  pricing.py
backend/agents/: coaching_runner.py  cover_letter_agent.py  feedback_agent.py  jd_agent.py  resume_agent.py  resume_coaching_agent.py  runner.py  skill_verifier_agent.py  utils.py
backend/database/: models.py  session.py
backend/database/migrations/: env.py
backend/database/repositories/: __init__.py  application.py  base.py  chat_message.py  cover_letter.py  llm_usage_log.py  oauth_state.py  resume.py  skill.py  user.py
backend/routers/: applications.py  auth.py  dev.py  resumes.py  users.py
backend/scripts/: seed.py
backend/tests/: conftest.py  factories.py  test_skill_matching.py
backend/tests/agents/: test_coaching_runner.py  test_jd_agent.py  test_resume_coaching_agent.py  test_runner.py  test_skill_verifier_agent.py
backend/tests/repositories/: test_application_repository.py  test_chat_message_repository.py  test_cover_letter_repository.py  test_llm_usage_log_repository.py  test_oauth_state_repository.py  test_resume_repository.py  test_skill_repository.py  test_user_repository.py
backend/tests/routes/: test_application_routes.py  test_auth_routes.py  test_cover_letter_routes.py  (+5 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
(+69 files in other folders)
