[project]
name = "the-forge"
version = "0.1.0"
description = "AI-powered résumé tailoring tool"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.10",
    "python-multipart>=0.0.12",
    "anthropic>=0.40.0",
    "mammoth>=1.8.0",
    "python-docx>=1.1.2",
    "authlib>=1.4.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.7.0",
    "google-cloud-storage>=2.19.0",
    "google-cloud-tasks>=2.17.0",
    "pyjwt>=2.12.1",
    "google-genai>=1.73.1",
    "weasyprint>=68.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "respx>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
